content/docker/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9998 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9999 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/ws" }
                          route: { prefix_rewrite: "/", cluster: "silo" }
                        - match: { prefix: "/dashboard" }
                          route: { cluster: "silo" }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                upgrade_configs:
                  - upgrade_type: "websocket"
                    enabled: true

  clusters:
    - name: silo
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: silo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: silo-1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: silo-2
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: silo-3
                      port_value: 80
